# llm-zoomcamp-2026-hw

./: .gitignore  README.md
01-agentic-rag/: 01-fetch-files.ipynb  02-index-search.ipynb  03-rag-helper.ipynb  04-chunking.ipynb  05-rag-chunking.ipynb  06-agent.ipynb  README.MD  chunks.json  documents.json  main.py  pyproject.toml
02-vector-search/: README.md  homeword02.ipynb
04-evaluation/: README.md  homework04.ipynb  pyproject.toml
05-monitoring/: homework05.ipynb  pyproject.toml  traces.db
