[project]
name = "04-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
